//
//  UITestKey.swift
//  Diagnostic
//
//  Created by Romain Mullot on 13/12/2018.
//  Copyright © 2018 Romain Mullot. All rights reserved.
//

import Foundation

enum UITestingIdentifiers: String {
    case cameraButton
    case signInButton
    case signInEmailField
    case signInForm
    case signInPasswordField
}
